Changes to precompiler option __linux__ substituted by __MINGW32__

--- a/bin/src/functions/Makefile
+++ b/bin/src/functions/Makefile
@@ -80,6 +80,7 @@ FCNOBJ= hypot3d.o  hypot3f.o  \
 
 # implicit rule uses CXXFLAGS for compilation
 CXXFLAGS=$(CCOPTS)
+CXX=${CCC}
 
 ALL: ${FCNOBJ} OBJLIST
 
