--- a/bin/ic1ion_module/Makefile
+++ b/bin/ic1ion_module/Makefile
@@ -107,8 +107,8 @@ ifeq (,$(findstring CYGWIN,$(shell uname)))
 LDFLAGS += -lpthread
 endif
 else
-LDFLAGS = $(LIBARPACK) -llapack -lblas
-#LDFLAGS = -Llibs $(LIBARPACK) -llapack -lblas $(LIBFORTRAN)
+#LDFLAGS = $(LIBARPACK) -llapack -lblas
+LDFLAGS = -Llibs $(LIBARPACK) -llapack -lblas $(LIBFORTRAN)
 #LDFLAGS = -Llibs $(LIBARPACK) -llapack -L/home/eqr/src/ATLAS-3.8.3/cygwin32_penryn/lib -lf77blas -latlas -lgfortran
 #LDFLAGS = -Llibs $(LIBARPACK) -llapack -L/home/eqr/src/ATLAS-3.8.3/mingw64_penryn/lib -lf77blas -latlas -lgfortran
 ifdef MSYS
