Changed factorial function in martin.c to run faster by using a lookup table.

--- a/bin/src/Makefile.common
+++ b/bin/src/Makefile.common
@@ -87,6 +87,11 @@ CC=x86_64-w64-mingw32-gcc -pipe $(ARCHFLAG)
 CCC=x86_64-w64-mingw32-g++ -pipe $(ARCHFLAG)
 CYGFLAGS=
 endif
+ifdef cross32
+CC=i686-w64-mingw32-gcc -m32 -pipe $(ARCHFLAG)
+CCC=i686-w64-mingw32-g++ -m32 -pipe $(ARCHFLAG)
+CYGFLAGS=
+endif
 endif
 
 #debug flag
