Disabled buggy caching of sqrt(Gamma)*V for beyond dipole intensity calculations in McDisp.

--- a/bin/src/Makefile.common
+++ b/bin/src/Makefile.common
@@ -26,7 +26,7 @@
 ###########################################################################
 
 # Checks to see if the gcc compiler is newer than 4.2
-ifneq ($(shell gcc --version|grep " 4.[2345]"),)
+ifneq ($(shell gcc --version|grep " 4.[2-9]"),)
 GCC42=1
 LFLAGS=-static-libgcc
 endif
