Fixed typo bug in jjjpar::sn(). Fixed gU cache allocation bug.

--- a/bin/ic1ion_module/Makefile
+++ b/bin/ic1ion_module/Makefile
@@ -67,6 +67,7 @@ gotoblas=1
 endif
 endif
 
+CFLAGS+= -fpermissive
 ##################################################################################
 #                              Declarations                                      #
 ##################################################################################
