--- a/bin/src/Makefile.common
+++ b/bin/src/Makefile.common
@@ -50,6 +50,7 @@ ARCHFLAG+=-fopenmp
 endif
 ifdef b32
 ARCHFLAG+=-m32
+LINKER += -m32
 endif
 endif
 else
@@ -59,6 +60,7 @@ endif
 
 # C compiler  ############################################################ 
 CC= gcc -pipe $(ARCHFLAG)
+LINKER = g++
 #CC=icc
 #COPTS= -ansi -O3 -fomit-frame-pointer -fforce-addr -mcpu=i486
 #COPTS= -DDEBUG
@@ -85,6 +87,7 @@ ARCHFLAG+=-DNOMINMAX
 ifdef cross64
 CC=x86_64-w64-mingw32-gcc -pipe $(ARCHFLAG)
 CCC=x86_64-w64-mingw32-g++ -pipe $(ARCHFLAG)
+LINKER=x86_64-w64-mingw32-g++ -m64
 CYGFLAGS=
 endif
 ifdef cross32
