Added routines to calculate energy levels up to a limit in ic1ion
Added new spectre_eig() function in spectre.cpp - using a method similar
to that used in the XTAL84 programs. The Coulomb+SpinOrbit Hamiltonian
is first diagonalised, and its eigenvector matrix used to transform
the full IC Hamiltonian. Then states with energy above a limit is
truncated, and the truncated Hamiltonian diagonalised to get the energies.
The eigenvectors of the transformed Hic is converted back into the
original basis using the eigenvectors of Hc+Hso.

--- a/bin/ic1ion_module/Makefile
+++ b/bin/ic1ion_module/Makefile
@@ -161,9 +161,9 @@ ifdef integral
 	@echo Linking $@
 	@$(LINKER) -o ../ic1ionit ic1ion.o spectre.o states.o ic1ion_module.o $(OBJ) $(LDFLAGS) $(VECOBJ) $(STATIC)
 else
-../ic1ionit$(EXE): checkgcc libs/liblapack.a $(OBJ) states.o ic1ion.o
+../ic1ionit$(EXE): checkgcc libs/liblapack.a $(OBJ) spectre.o states.o ic1ion.o
 	@echo Linking $@
-	@$(LINKER) -o ../ic1ionit ic1ion.o states.o $(OBJ) $(LDFLAGS) $(STATIC)
+	@$(LINKER) -o ../ic1ionit ic1ion.o states.o $(OBJ) spectre.o $(LDFLAGS) $(VECOBJ) $(STATIC)
 endif
 
 ic1ion.o: ic1ion.cpp maths.hpp states.hpp ic1ion.hpp
