average improved - takes into account also last unfinished block in data now

--- a/bin/src/Makefile
+++ b/bin/src/Makefile
@@ -26,9 +26,14 @@ OSTYPE=$(shell uname)
 ifneq (,$(findstring $(OSTYPE),Linux))
  LINUX = linux
 else
+ifneq (,$(findstring $(OSTYPE),Darwin))
+ LINUX = linux
+ CYGWIN=1
+else
  WINDOWS = windows
 ifneq (,$(findstring CYGWIN,$(shell uname)))
  CYGWIN=1
+endif
 endif
 endif
 #
