rixs implemented in module so1ion

--- a/bin/src/Makefile
+++ b/bin/src/Makefile
@@ -154,10 +154,10 @@ graphic_parameters.o: graphic_parameters.cpp graphic_parameters.hpp martin.h vec
 paramete.o: paramete.cpp paramete.hpp martin.h vector.h 
 	$(CCC) $(CFLAGS) $< 
 
-par.o: par.cpp par.hpp jjjpar.hpp martin.h vector.h
+par.o: par.cpp par.hpp jjjpar.hpp martin.h vector.h ionpars.hpp
 	$(CCC) $(CFLAGS) $< 
 
-jjjpar.o: jjjpar.cpp jjjpar_observables.cpp jjjpar_intmod_kramer.cpp jjjpar_intmod_brillouin.cpp jjjpar_intmod_cluster.cpp jjjpar_basmodfunc.cpp jjjpar.hpp martin.h vector.h myev.h
+jjjpar.o: jjjpar.cpp ionpars.hpp jjjpar_observables.cpp jjjpar_intmod_kramer.cpp jjjpar_intmod_brillouin.cpp jjjpar_intmod_cluster.cpp jjjpar_basmodfunc.cpp jjjpar.hpp martin.h vector.h myev.h
 	$(CCC) $(CFLAGS) $< 
 
 testspin.o: testspin.cpp testspin.hpp spincf.hpp martin.h
