singleion programm extended to handle individual sipf files and create .trs file so1ion/ic1ion/icf1ion will not create trs file any more

--- a/bin/cf1ion_module/Makefile
+++ b/bin/cf1ion_module/Makefile
@@ -57,7 +57,7 @@ ifdef WINDOWS
 EXE=.exe
 endif
 
-all : cfieldrout.o cfield.so ../cfield$(EXE) ../so1ionit$(EXE) module.o
+all : cfieldrout.o cfield.so ../cfield$(EXE) ../so1ion$(EXE) module.o
 
 VECOBJS= matpack.o sortdbl.o sort2dbl.o sort3dbl.o ivector.o \
 		imatrix.o dvector.o dmatrix.o dmatmul.o cvector.o \
@@ -82,8 +82,8 @@ cfield.so: module.o cfield.o  $(VECOBJS) $(CFOBJS)
 ../cfield$(EXE): cfield.o $(CFOBJS)
 	$(CCC) $(CCOPTS) -Wall -o ../cfield $^ $(LFLAGS)
 
-../so1ionit$(EXE): so1ion.o $(CFOBJS)
-	$(CCC) $(CCOPTS) -Wall -o ../so1ionit $^ $(LFLAGS)
+../so1ion$(EXE): so1ion.o $(CFOBJS)
+	$(CCC) $(CCOPTS) -Wall -o ../so1ion $^ $(LFLAGS)
 
 module.o: module.c
 	$(CCC) $(CCOPTS) -Wall -fPIC -c  -o module.o module.c  $(INCLDIRS) $(LFLAGS)
