--- a/bin/src/Makefile
+++ b/bin/src/Makefile
@@ -201,7 +201,7 @@ qvectors.o: qvectors.cpp qvectors.hpp spincf.hpp martin.h vector.h inipar.hpp my
 mcphas.o: mcphas.c $(INCL) mcphas_htcalc.c mcphas_fecalc.c mcphas_physpropcalc.c
 	$(CCC) $(CFLAGS)  $<
 
-mcdisp.o: mcdisp.c  myev.c mcdisp_intcalc.c mcdisp_output.c jq.hpp mdcf.hpp $(INCL)
+mcdisp.o: mcdisp.c  myev.c mcdisp_intcalc.c mcdisp_output.c jq.hpp mdcf.hpp trs_io.c $(INCL)
 	$(CCC) $(CFLAGS) $(THREADFLAG) $<
 
 cond.o: cond.c paramete.hpp martin.h
@@ -219,7 +219,7 @@ spins.o: spins.c densities_func.c spincf.hpp  martin.h vector.h graphic_paramete
 spinsfromq.o: spinsfromq.c spincf.hpp  par.hpp martin.h vector.h 
 	$(CCC) $(CFLAGS) $<
 
-singleion.o: singleion.c par.hpp  martin.h vector.h
+singleion.o: singleion.c par.hpp  martin.h vector.h trs_io.c
 	$(CCC) $(CFLAGS) $<
 
 densplt.o:  densplt.c plt_func.c density.hpp martin.h vector.h jjjpar.hpp graphic_parameters.hpp cryststruct.hpp
